fix visible problem about header

--- a/themes/renewal-funds/sass/_header.scss
+++ b/themes/renewal-funds/sass/_header.scss
@@ -106,7 +106,7 @@
 @include desktop {
     .site-header {
         background-color: $color__brand-color-green;
-        height: 108.78px;
+        height: 110.78px;
         .header-container {
             width: 1240px;
             margin: 0 auto;
